src/ui/features/environments/tests/snapshots/terracotta__ui__features__environments__tests__matrix__layout__shared_workspace_80x24.snap
---
source: src/ui/features/environments/tests/matrix.rs
expression: output
---
terracotta ▸ prod                                                           tofu
staging ✗ Error  │  staging ✗ Error
┌* [2] Compare · Ready 0/2─────────────────────────────────────────────────────┐
│                                                                              │
│Address     │ staging     staging     │ why                                   │
│────────────┼─────────────────────────┼───────────────────────────────────────│
│Waiting for environment plans.                                                │
│                                                                              │
│blank: absent   .: unchanged   ?: plan unavailable                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌  [3] Relations · staging · whole env─────────────────────────────────────────┐
│Plan failed: Synthetic acquisition error                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
v full plan | / filter | r retry | [/] env | 2/3 focus | f maximize | ? help
q quit
