src/ui/features/environments/tests/snapshots/terracotta__ui__features__environments__tests__matrix__layout__vrt_initial_100x30.snap
---
source: src/ui/features/environments/tests/matrix.rs
expression: "snapshot(&mut view, &state)"
---
100x30
row 0: 0..100 fg=Reset bg=Reset modifier=NONE text="terracotta ▸ dev                                                                           terraform"
row 1: 0..3 fg=Reset bg=Reset modifier=NONE text="dev" | 3..4 fg=DarkGray bg=Reset modifier=NONE text=" " | 4..6 fg=Green bg=Reset modifier=NONE text="✓ " | 6..11 fg=Reset bg=Reset modifier=NONE text="Ready" | 11..14 fg=Green bg=Reset modifier=NONE text=" +1" | 14..17 fg=Yellow bg=Reset modifier=NONE text=" ~3" | 17..22 fg=DarkGray bg=Reset modifier=NONE text="  │  " | 22..25 fg=Reset bg=Reset modifier=NONE text="stg" | 25..26 fg=DarkGray bg=Reset modifier=NONE text=" " | 26..28 fg=Green bg=Reset modifier=NONE text="✓ " | 28..33 fg=Reset bg=Reset modifier=NONE text="Ready" | 33..36 fg=Yellow bg=Reset modifier=NONE text=" ~3" | 36..41 fg=DarkGray bg=Reset modifier=NONE text="  │  " | 41..45 fg=Reset bg=Reset modifier=NONE text="prod" | 45..46 fg=DarkGray bg=Reset modifier=NONE text=" " | 46..48 fg=Green bg=Reset modifier=NONE text="✓ " | 48..53 fg=Reset bg=Reset modifier=NONE text="Ready" | 53..56 fg=Yellow bg=Reset modifier=NONE text=" ~5" | 56..100 fg=Reset bg=Reset modifier=NONE text="                                            "
row 2: 0..3 fg=Cyan bg=Reset modifier=NONE text="┌* " | 3..14 fg=Reset bg=Reset modifier=BOLD text="[2] Compare" | 14..100 fg=Cyan bg=Reset modifier=NONE text="─────────────────────────────────────────────────────────────────────────────────────┐"
row 3: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..99 fg=DarkGray bg=Reset modifier=NONE text="                                                                                                  " | 99..100 fg=Cyan bg=Reset modifier=NONE text="│"
row 4: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..99 fg=Yellow bg=Reset modifier=NONE text="                                                                                                  " | 99..100 fg=Cyan bg=Reset modifier=NONE text="│"
row 5: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..49 fg=Reset bg=Reset modifier=NONE text="Address                                         " | 49..51 fg=DarkGray bg=Reset modifier=NONE text="│ " | 51..87 fg=Reset bg=Reset modifier=NONE text="dev         stg         prod        " | 87..89 fg=DarkGray bg=Reset modifier=NONE text="│ " | 89..99 fg=Reset bg=Reset modifier=NONE text="why       " | 99..100 fg=Cyan bg=Reset modifier=NONE text="│"
row 6: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..99 fg=DarkGray bg=Reset modifier=NONE text="────────────────────────────────────────────────┼─────────────────────────────────────┼───────────" | 99..100 fg=Cyan bg=Reset modifier=NONE text="│"
row 7: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..20 fg=Reset bg=Reset modifier=BOLD text="Differs across envs" | 20..98 fg=Reset bg=Reset modifier=NONE text="                                                                              " | 98..99 fg=Rgb(80, 82, 94) bg=Reset modifier=NONE text="▲" | 99..100 fg=Cyan bg=Reset modifier=NONE text="│"
row 8: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..3 fg=Reset bg=Reset modifier=NONE text="> " | 3..26 fg=Reset bg=Reset modifier=UNDERLINED text="terraform_data.dev_only" | 26..49 fg=Reset bg=Reset modifier=NONE text="                       " | 49..51 fg=DarkGray bg=Reset modifier=NONE text="│ " | 51..63 fg=Green bg=Reset modifier=NONE text="+           " | 63..87 fg=Reset bg=Reset modifier=NONE text="                        " | 87..89 fg=DarkGray bg=Reset modifier=NONE text="│ " | 89..98 fg=Reset bg=Reset modifier=NONE text="only in …" | 98..99 fg=Rgb(192, 184, 176) bg=Reset modifier=NONE text="┃" | 99..100 fg=Cyan bg=Reset modifier=NONE text="│"
row 9: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..98 fg=Reset bg=Reset modifier=NONE text="                                                                                                 " | 98..99 fg=Rgb(192, 184, 176) bg=Reset modifier=NONE text="▼" | 99..100 fg=Cyan bg=Reset modifier=NONE text="│"
row 10: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..99 fg=Reset bg=Reset modifier=NONE text="blank: absent   .: unchanged   ?: plan unavailable                                                " | 99..100 fg=Cyan bg=Reset modifier=NONE text="│"
row 11: 0..100 fg=Cyan bg=Reset modifier=NONE text="└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
row 12: 0..3 fg=DarkGray bg=Reset modifier=NONE text="┌  " | 3..16 fg=Reset bg=Reset modifier=BOLD text="[3] Relations" | 16..22 fg=Reset bg=Reset modifier=NONE text=" · dev" | 22..100 fg=DarkGray bg=Reset modifier=NONE text=" · whole env─────────────────────────────────────────────────────────────────┐"
row 13: 0..1 fg=DarkGray bg=Reset modifier=NONE text="│" | 1..3 fg=Reset bg=Reset modifier=NONE text="  " | 3..4 fg=Yellow bg=Reset modifier=NONE text="~" | 4..99 fg=Reset bg=Reset modifier=NONE text=" terraform_data.server[*] ×2 [unknown values]                                                  " | 99..100 fg=DarkGray bg=Reset modifier=NONE text="│"
row 14: 0..1 fg=DarkGray bg=Reset modifier=NONE text="│" | 1..99 fg=Reset bg=Reset modifier=NONE text="  │                                                                                               " | 99..100 fg=DarkGray bg=Reset modifier=NONE text="│"
row 15: 0..1 fg=DarkGray bg=Reset modifier=NONE text="│" | 1..8 fg=Reset bg=Reset modifier=NONE text="  └──> " | 8..9 fg=Yellow bg=Reset modifier=NONE text="~" | 9..99 fg=Reset bg=Reset modifier=NONE text=" terraform_data.api                                                                       " | 99..100 fg=DarkGray bg=Reset modifier=NONE text="│"
row 16: 0..1 fg=DarkGray bg=Reset modifier=NONE text="│" | 1..99 fg=Reset bg=Reset modifier=NONE text="       │                                                                                          " | 99..100 fg=DarkGray bg=Reset modifier=NONE text="│"
row 17: 0..1 fg=DarkGray bg=Reset modifier=NONE text="│" | 1..13 fg=Reset bg=Reset modifier=NONE text=">      └┄┄> " | 13..14 fg=Green bg=Reset modifier=NONE text="+" | 14..15 fg=Reset bg=Reset modifier=NONE text=" " | 15..38 fg=Reset bg=Reset modifier=BOLD | UNDERLINED text="terraform_data.dev_only" | 38..40 fg=Reset bg=Reset modifier=BOLD text=" !" | 40..99 fg=Reset bg=Reset modifier=NONE text="                                                           " | 99..100 fg=DarkGray bg=Reset modifier=NONE text="│"
row 18: 0..1 fg=DarkGray bg=Reset modifier=NONE text="│" | 1..99 fg=Reset bg=Reset modifier=NONE text="                                                                                                  " | 99..100 fg=DarkGray bg=Reset modifier=NONE text="│"
row 19: 0..1 fg=DarkGray bg=Reset modifier=NONE text="│" | 1..99 fg=Reset bg=Reset modifier=NONE text="A ──> B  B uses A                                                                                 " | 99..100 fg=DarkGray bg=Reset modifier=NONE text="│"
row 20: 0..1 fg=DarkGray bg=Reset modifier=NONE text="│" | 1..99 fg=Reset bg=Reset modifier=NONE text="A ┄┄> B  block-level, may not apply                                                               " | 99..100 fg=DarkGray bg=Reset modifier=NONE text="│"
row 21: 0..1 fg=DarkGray bg=Reset modifier=NONE text="│" | 1..99 fg=Reset bg=Reset modifier=NONE text="Grouped links may apply to only some members                                                      " | 99..100 fg=DarkGray bg=Reset modifier=NONE text="│"
row 22: 0..1 fg=DarkGray bg=Reset modifier=NONE text="│" | 1..99 fg=Reset bg=Reset modifier=NONE text="! differs across envs                                                                             " | 99..100 fg=DarkGray bg=Reset modifier=NONE text="│"
row 23: 0..1 fg=DarkGray bg=Reset modifier=NONE text="│" | 1..99 fg=Reset bg=Reset modifier=NONE text="                                                                                                  " | 99..100 fg=DarkGray bg=Reset modifier=NONE text="│"
row 24: 0..1 fg=DarkGray bg=Reset modifier=NONE text="│" | 1..99 fg=Reset bg=Reset modifier=NONE text="                                                                                                  " | 99..100 fg=DarkGray bg=Reset modifier=NONE text="│"
row 25: 0..1 fg=DarkGray bg=Reset modifier=NONE text="│" | 1..99 fg=Reset bg=Reset modifier=NONE text="                                                                                                  " | 99..100 fg=DarkGray bg=Reset modifier=NONE text="│"
row 26: 0..1 fg=DarkGray bg=Reset modifier=NONE text="│" | 1..99 fg=Reset bg=Reset modifier=NONE text="                                                                                                  " | 99..100 fg=DarkGray bg=Reset modifier=NONE text="│"
row 27: 0..100 fg=DarkGray bg=Reset modifier=NONE text="└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
row 28: 0..5 fg=Yellow bg=Reset modifier=NONE text="Enter" | 5..23 fg=Reset bg=Reset modifier=NONE text=" open selected row" | 23..26 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 26..27 fg=Yellow bg=Reset modifier=NONE text="v" | 27..37 fg=Reset bg=Reset modifier=NONE text=" full plan" | 37..40 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 40..41 fg=Yellow bg=Reset modifier=NONE text="/" | 41..48 fg=Reset bg=Reset modifier=NONE text=" filter" | 48..51 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 51..52 fg=Yellow bg=Reset modifier=NONE text="[" | 52..53 fg=DarkGray bg=Reset modifier=NONE text="/" | 53..54 fg=Yellow bg=Reset modifier=NONE text="]" | 54..58 fg=Reset bg=Reset modifier=NONE text=" env" | 58..61 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 61..62 fg=Yellow bg=Reset modifier=NONE text="b" | 62..74 fg=Reset bg=Reset modifier=NONE text=" toggle envs" | 74..77 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 77..78 fg=Yellow bg=Reset modifier=NONE text="1" | 78..79 fg=DarkGray bg=Reset modifier=NONE text="/" | 79..80 fg=Yellow bg=Reset modifier=NONE text="2" | 80..81 fg=DarkGray bg=Reset modifier=NONE text="/" | 81..82 fg=Yellow bg=Reset modifier=NONE text="3" | 82..100 fg=Reset bg=Reset modifier=NONE text=" focus            "
row 29: 0..1 fg=Yellow bg=Reset modifier=NONE text="f" | 1..10 fg=Reset bg=Reset modifier=NONE text=" maximize" | 10..13 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 13..14 fg=Yellow bg=Reset modifier=NONE text="?" | 14..19 fg=Reset bg=Reset modifier=NONE text=" help" | 19..22 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 22..23 fg=Yellow bg=Reset modifier=NONE text="q" | 23..100 fg=Reset bg=Reset modifier=NONE text=" quit                                                                        "
